--- a/Template01/style.css
+++ b/Template01/style.css
@@ -42,17 +42,19 @@ header {
 }
 
 .buttons a {
-    padding-right: 30px;
+    padding-right: 20px;
     text-decoration: none;
     font-size: 20px;
     color: white;
     font: 1em sans-serif;
     font-weight: 600;
+    transition: padding .5s ease-in-out;
 }
 .buttons a:hover {
     border-bottom: 2px solid rgb(123, 218, 223);
     border-top: 2px solid rgb(123, 218, 223);
     color: rgb(123, 218, 223);
+    padding: 5px 10px 0px 10px;
 }
 
 main {
@@ -116,8 +118,13 @@ hr {
     padding: 10px;
     font-weight: 700;
     font-size: 20px;
+    transition: all .5s ease-in-out;
 }
 
 .buttonb:hover {
     background-color: rgb(123, 218, 223);
+    border-radius: 6px;
+    padding: 12px;
+    font-weight: 800;
+    font-size: 23px;
 } 
