--- a/Template01/style.css
+++ b/Template01/style.css
@@ -112,8 +112,8 @@ hr {
 .buttonb{
     text-decoration: none;
     color: white;
-    background-color:rgb(54, 143, 148);
-    border: 2px solid rgb(226, 215, 215);
+    background-color:rgba(54, 143, 148, 0.1);
+    border: 2px solid rgba(226, 215, 215, 0.1);
     border-radius: 5px;
     padding: 10px;
     font-weight: 700;
@@ -122,7 +122,7 @@ hr {
 }
 
 .buttonb:hover {
-    background-color: rgb(123, 218, 223);
+    background-color: rgba(123, 218, 223, 0.1);
     border-radius: 6px;
     padding: 12px;
     font-weight: 800;
